--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express-session": "1.18.1"
   }
 }
