--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "cors": "^2.8.5",
-    "express-session": "1.18.1"
+    "express-session": "1.18.1",
+    "dotenv": "^10.0.0"
   }
 }
